@@ -1,3 +1,5 @@
+* sequential gridding: usage improvements
+* sample displacement error consideration in qconversion (experimental)
 * new Q2AngFit function able to fit the goniometer angles or a q-vector
 * minor fixes in the CIF file parser
 * add workaround for internal coordinate system definition in the experiment 
